SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

Recent files dialog: New right mouse menu items in file list: "Copy path" and "Copy file name"

"View Objects window alongside SQL" function is now also accessible through Session menu, tools popup (ctrl+t) and can be assigned a keyboard short cut.

Import CSV/Excel files: New check box "Use double quotes as text qualifier" in CSV import file settings

#1410 Import CSV/Excel files without existing table
  Import of CVS and MS-Excel files is now available not only on tables in Object tree but also in Session menu and tool bar as well as in tools popup (ctrl+t).
  The import dialog has a new section "Create new import table in database".

#583/#218 SUM function in SQL results
   The upper right of an SQL result tab has a new drop down button which allows to display a sum panel.

"Find column" function of SQL results: The "Find column" dialog has a new checkbox "Find in column name".
   --> When different tables are found in a result the table names are shown in brackets.
       The new checkbox allows to configure if the search should include matches in table names.

Object tree: Improved split pane sizing behavior.

#582 View Objects window alongside SQL
   New toolbar button "Show Object tree besides editor" shows an additional Object tree besides the current SQL editor.

#581 JSON and XML export allow to select the charset/encoding
  Info: The export function is available for tables (table's right mouse menu) and SQL queries (editor's right mouse menu / tools popup ctrl+t / toolbar)

Introduced Java 13 compatibility.

SQL editor: When control key is down tables are marked as hyper links.
  Note: With control key down mouse click on a table opens the table in the Object tree.