@@ -76,6 +76,8 @@ ProcessDetailsDialog.title=Process details
 ProcessDetailsDialog.processDesc=Launching Hibernate in its own process can keep SQuirreL from running out of memory. To launch the process SQuirreL will execute the following command (note the port paramter at the end):
 
 ProcessDetailsDialog.restoreDefault=Restore default
+ProcessDetailsDialog.restoreDefault.run.in.console=Restore default to run in console
+
 
 ProcessDetailsDialog.RefreshRealCmnd=Refresh
 ProcessDetailsDialog.RefreshRealCmndCopyToClip=Copy to clipboard
